--- a/src/operations/templates/edit_steam_workshop_controller.html
+++ b/src/operations/templates/edit_steam_workshop_controller.html
@@ -18,7 +18,12 @@
   <div style="padding: 10px">
     <button class="btn btn-primary" ng-click="search()">
       <span class="glyphicon glyphicon-search"></span>
-      Sök Steam Workshop
+      Sök
+    </button>
+
+    <button class="btn btn-primary" ng-click="suggestions()">
+      <span class="glyphicon glyphicon-paperclip"></span>
+      Förslag
     </button>
   </div>
 </div>
