Show warning when mods are missing in Arma3Sync repository

--- a/src/operations/templates/edit_pws_controller.html
+++ b/src/operations/templates/edit_pws_controller.html
@@ -10,6 +10,8 @@
         </form>
 
         {{ addon.name }}
+
+        <span class="glyphicon glyphicon-warning-sign text-danger" aria-hidden="true" title="Saknas på Arma3Sync" ng-hide="addonExistsInArma3Sync(addon)"></span>
       </td>
     </tr>
   </table>
