Suggest Arma3Sync mods based on Steam Workshop

--- a/src/operations/templates/edit_pws_controller.html
+++ b/src/operations/templates/edit_pws_controller.html
@@ -27,5 +27,9 @@
       <span class="glyphicon glyphicon-list-alt"></span>
       DLCs
     </button>
+    <button class="btn btn-primary" ng-click="suggestions()">
+      <span class="glyphicon glyphicon-random"></span>
+      Förslag
+    </button>
   </div>
 </div>
