--- a/src/operations/templates/edit_steam_workshop_controller.html
+++ b/src/operations/templates/edit_steam_workshop_controller.html
@@ -22,7 +22,7 @@
     </button>
 
     <button class="btn btn-primary" ng-click="suggestions()">
-      <span class="glyphicon glyphicon-paperclip"></span>
+      <span class="glyphicon glyphicon-random"></span>
       Förslag
     </button>
   </div>
