Import launcher HTML preset into Steam Workshop

--- a/src/operations/templates/edit_steam_workshop_controller.html
+++ b/src/operations/templates/edit_steam_workshop_controller.html
@@ -25,5 +25,10 @@
       <span class="glyphicon glyphicon-random"></span>
       Förslag
     </button>
+
+    <button class="btn btn-primary" ng-click="uploadHTML()">
+      <span class="glyphicon glyphicon-open"></span>
+      Importera HTML
+    </button>
   </div>
 </div>
